feat: responsive website improvements
- embarrased myself w .DS_Store, can't have ppl know I am a mac user
- added some breakpoints for more flexibility
- also added npm run dev that runs both commands (and doesn't orphan processes instead of using &)

--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "NextJS was annoying to complete so I did not finish the project.",
   "main": "index.js",
   "scripts": {
+    "serve": "npx eleventy --serve",
     "css:watch": "npx tailwindcss -i ./tailwind.css -o ./_site/css/style.css --watch",
-    "dev": "npx eleventy --serve"
+    "dev": "npm-run-all --parallel serve css:watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "github:11ty/eleventy",
+    "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.4.3"
   }
 }
