--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "github:11ty/eleventy",
+    "@tailwindcss/typography": "^0.5.12",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.4.3"
   }
