--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@tailwindcss/typography": "^0.5.12",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.4.3"
+  },
+  "dependencies": {
+    "@11ty/eleventy-plugin-rss": "^1.2.0"
   }
 }
