--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@11ty/eleventy": "github:11ty/eleventy",
     "@tailwindcss/typography": "^0.5.12",
+    "markdown-it-anchor": "^9.0.1",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.4.3"
   },
